--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h2>Hi guys <br>this is my fiest python project link given below </h2>
-    <a href="/products/templates/index.html">click here</a>
+    <a href="/user">click here</a>
 </body>
 </html>
